# turbodelete-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddressBar.tsx  ConfirmDialog.tsx  FileGrid.tsx  ProgressModal.tsx  Sidebar.tsx
src/hooks/: useFileSystem.ts
