[package]
name = "turbo-delete-gui"
version = "0.1.0"
description = "Turbo Delete GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "turbo_delete_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
rayon = "1.10"
sysinfo = "0.33"
